--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="https://github.com/sergeik1970/CactusShop">GitHub</a> - https://github.com/sergeik1970/CactusShop <br> <br>
 
     <h2>Перейти на сайт:</h2>
-    <a href="http://qrcoder.ru" target="_blank"><img src="http://qrcoder.ru/code/?https%3A%2F%2Fsergeik1970.github.io%2FCactusShop%2F&10&0" width="500" height="500" border="0" title="QR код"></a>
+    <a href="http://qrcoder.ru" target="_blank"><img src="images/QR.jpg" width="500" height="500" border="0" title="QR код"></a>
     
 </body>
 </html>
