--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <a href="https://github.com/sergeik1970/CactusShop">GitHub</a> - https://github.com/sergeik1970/CactusShop <br> <br>
 
     <h2>Перейти на сайт:</h2>
-    <a href="http://qrcoder.ru" target="_blank"><img src="images/QR.jpg" width="500" height="500" border="0" title="QR код"></a>
-    
+    <img src="images/QR.jpg" width="500px" alt="">
 </body>
 </html>
